--- a/my-project/src/index.css
+++ b/my-project/src/index.css
@@ -1,6 +1,19 @@
 @import "tailwindcss";
 
 
+@layer {
+    .container {
+        @apply px-[30px] mx-auto;
+    }
+    .element-center {
+        @apply flex justify-center items-center;
+    }
+    .btn {
+        @apply bg-[#42b0d1] hover:bg-[#8cdae4] transition-all duration-200;
+    }
+}
+
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #181e2a;
